.devcontainer/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 7771 }

static_resources:
  listeners:
    - name: listener_proxy

      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7770

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream
                            # Disable timeout for SSE
                            # https://medium.com/@kaitmore/server-sent-events-http-2-and-envoy-6927c70368bb
                            timeout: 0s

                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_response(response_handle)
                            csp = "default-src 'none'; script-src 'self'; img-src 'self'; style-src 'self'; connect-src 'self'";
                            response_handle:headers():add("Content-Security-Policy", csp);
                            response_handle:headers():add("X-Frame-Options", "deny");
                            response_handle:headers():add("X-XSS-Protection", "1; mode=block");
                            response_handle:headers():add("X-Content-Type-Options", "nosniff");
                            response_handle:headers():add("Referrer-Policy", "no-referrer");
                            response_handle:headers():add("X-Download-Options", "noopen");
                            response_handle:headers():add("X-DNS-Prefetch-Control", "off");
                            response_handle:headers():add("Strict-Transport-Security", "max-age=31536000; includeSubDomains");
                            response_handle:headers():add("Permissions-Policy",
                                                        "accelerometer=(), "..
                                                        "camera=(), "..
                                                        "geolocation=(), "..
                                                        "gyroscope=(), "..
                                                        "magnetometer=(), "..
                                                        "microphone=(), "..
                                                        "payment=(), "..
                                                        "usb=()");
                            response_handle:headers():remove("X-Powered-By");
                        end

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: upstream
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: development
                      port_value: 8777
